fix(css): Remove unnecessary overflow-x style Removes an empty `overflow-x` style that was causing a css validation error.

--- a/public/css/home.module.css
+++ b/public/css/home.module.css
@@ -95,7 +95,7 @@ body {
   gap: 48px;
   margin-block: 13px;
   margin-inline-start: 95px;
-  overflow-x: auto;
+  overflow-x: ;
   border: 1px solid green;
 }
 .area-wrapper .area-arrival .arrival-list .arrival-list-item {
